[package]
name = "poem-openapi-problemdetails"
version = "0.1.0"
edition = "2024"

[dependencies]
poem-openapi-problemdetails-macro = { path = "./poem-openapi-problemdetails-macro/" }
serde_json = "1.0.140"
poem = { version = "3.1.10", features = ["test"] }
poem-openapi = { version = "5.1.14", features = ["swagger-ui"] }
problemdetails = { version = "0.6.0", features = ["poem"] }

[dev-dependencies]
tokio = { version = "1.44.2", features = ["full"] }
insta = { version = "1.43.1", features = ["json"] }
thiserror = "2.0.12"
